[skip ci] Updated submodule to the latest commit, and fixed 2 issues with multiple external links and also fixed the color of version-switcher in dark mode

--- a/doc/source/_static/numpy.css
+++ b/doc/source/_static/numpy.css
@@ -43,6 +43,9 @@ button.btn.version-switcher__button:hover {
   font-size: small;
 }
 
+html[data-theme=dark] button.btn.version-switcher__button{
+  color : white;
+}
 /* Main index page overview cards */
 
 .sd-card .sd-card-img-top {
